# AudioKontroller

./: AudioHandler.cpp  AudioHandler.h  ButtonHandler.cpp  ButtonHandler.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DiscordIPC.cpp  DiscordIPC.h  FocusMonitor.cpp  FocusMonitor.h  Logger.cpp  Logger.h  Overlay.cpp  Overlay.h  PCPanelHandler.cpp  PCPanelHandler.h  Util.h  WALKTHROUGH.md  WindowUtils.cpp  config.json  install-opensuse.sh  install.sh  main.cpp  uninstall.sh
packaging/rpm/: 99-audiokontroller-pcpanel.rules  AudioKontroller.spec  README.md  audiokontroller.service  build-rpm.sh  config.json  ydotoold.service
